--- a/src/components/make-order/make-order.module.css
+++ b/src/components/make-order/make-order.module.css
@@ -3,8 +3,13 @@
     justify-content: flex-end;
 }
 .total {
-    display: inline;
+    display: flex;
     align-self: center;
+    align-items: center;
+}
+.total svg {
+    width: 36px;
+    height: 36px;
 }
 .totalText {
     font-size: 48px;
