--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -1,10 +1,10 @@
 .overlay {
-    position: absolute;
+    position: fixed;
 
     background: rgba(0, 0, 0, 0.7);
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
     z-index: 999;
 }
